Reformats JavaDocs from Test-Classes